# media-optimizer

./: .gitignore  main.py  pyproject.toml
media_optimizer/: __init__.py  config.py  optimize_command.py  status_command.py
media_optimizer/optimizers/: __init__.py  base_optimizer.py  jpeg_optimizer.py  mp3_optimizer.py  png_optimizer.py
media_optimizer/processes/: base_process.py
media_optimizer/processes/jpeg/: __init__.py  jpegtran.py
media_optimizer/processes/mp3/: __init__.py  sox.py
media_optimizer/processes/png/: __init__.py  advpng.py  optipng.py  pngcrush.py  pngquant.py  zopflipng.py
media_optimizer/utilities/: __init__.py
tests/: test_image_optimizer.py
